2015-XX-XX vdr-mpv-0.0.5
- added argument to override the main menu text

2015-06-29: vdr-mpv-0.0.4
- start playback even when audio or video fails, this should give a better
  user feedback to see what's configured wrong
- use VDR volume control if passthrough is disabled
- add support for playlists, by default the file endings m3u, ini, pls, txt,
  playlist are passed as a playlist, this can be adjusted by the new argument x
- stereo downmix support, this can be enabled in the setup menu
- workaround for open osd during shutdown
- navigating through playlist using the remote control keys 7 and 9
  7 to select the previous playlist item, 9 to select the next
- the osd file in /tmp is removed when osd is closed, this should also fix
  unclean osd display while using the audio/subtitle menus
- added a setup option to choose between chapter and playlist navigation on
  prev/next keys
- added a setup option to use the next/prev keys for chapter navigation and
  if the file has no chapters use them for playlist navigation. this option
  is turned on by default
- use pause property of mpv for detecting if player is paused
- use speed property of mpv for detecting current player speed
- if the file contains named chapters they are now displayed on replay info
- added option to display the title from the meta data instead of the filename
  you have to enable this in the setup menu
- readd MsgReplaying which was lost somewhere during cleanup
- added shuffle function for playlist, if the playlist ist started with OK
  it's played in normal order, if the playback is started with yellow shuffle
  is active
- the service function Mpv_PlaylistShuffle can be used by other plugins to start
  a playlist in shuffle mode (see filebrowser.c for an example)
- added a first german translation

2015-06-22: vdr-mpv 0.0.3
- FastFwd and FastRwd (Rewind only jumps back 10 seconds, since mpv has no rewind)
- Audio passthrough is now configurable in the plugin setup menu